# fc

./: CMakeLists.txt  INSTALL.md  README.md
composition/: CMakeLists.txt  main.cpp
include/: fc.h  fc_apply_utils.h  fc_base.h  fc_common.h  fc_experimental.h  fc_experimental_utils.h  fc_experimental_variadic.h  fc_experimental_variadic_utils.h  fc_utils.h  fc_variadic.h  fc_variadic_utils.h
samples/: CMakeLists.txt  main.cpp  sample.cpp  sample_experimental.cpp  sample_string.cpp  sample_threaded.cpp  sample_timer.h
tests/: CMakeLists.txt  common.h  experimental.cpp  simple.cpp
